Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Welcome to the API"
-description: "Example section for showcasing API endpoints"
+title: "Kyvorn API Documentation"
+description: "This documentation features the API endpoints that can be used to embed Kyvorn API into your application."
+sidebarTitle: "Home"
 ---
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
+<Tip>
+  If you are a developer of a moderately sized or larger executor or application, you can [create a ticket in Peretas Technologies](https://discord.gg/peretas) to get help setting up the API into your executor and get it featured on the Kyvorn website.
+</Tip>
 
 ## Welcome
 
