--- a/api-reference/implementation.mdx
+++ b/api-reference/implementation.mdx
@@ -1,1 +1,13 @@
+---
+title: "Implement Kyvorn into your UI"
+sidebarTitle: "Implementation"
+description: "This documentation shows how to implement Kyvorn API into your UI/app"
+---
 
+<Tip>
+  Stay in the [iBallexus Discord Server](https://discord.gg/iballexus) to get notified of the latest updates to the Kyvorn API
+</Tip>
+
+## Setting up your UI
+
+For this tutorial, I will create a basic UI card layout that will show information about the fetched items with a search. On click, it will open a popup menu that will show the raw script with a copy button.
