Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/posts.mdx
+++ b/api-reference/endpoint/posts.mdx
@@ -3,4 +3,4 @@ title: 'Get Posts/Scripts'
 openapi: 'GET /api/posts'
 ---
 
-posts testing edit this yea
+## [Learn more about implementing Kyvorn into your UI](https://kyvorndocs.peretas.tech/api-reference/implementation)
