--- a/api-reference/endpoint/rawscript.mdx
+++ b/api-reference/endpoint/rawscript.mdx
@@ -2,3 +2,5 @@
 title: 'Get Raw Script'
 openapi: 'GET /scripts/raw/{scriptid}'
 ---
+
+## [Learn more about implementing Kyvorn into your UI](https://kyvorndocs.peretas.tech/api-reference/implementation)
