--- a/api-reference/endpoint/postsbyid.mdx
+++ b/api-reference/endpoint/postsbyid.mdx
@@ -2,3 +2,5 @@
 title: 'Get Post Info by ID'
 openapi: 'GET /api/posts/{id}'
 ---
+
+## [Learn more about implementing Kyvorn into your UI](https://kyvorndocs.peretas.tech/api-reference/implementation)
