Documentation edits made through Mintlify web editor

--- a/api-reference/embedded.mdx
+++ b/api-reference/embedded.mdx
@@ -1,1 +1,32 @@
+---
+title: "Kyvorn Embedded"
+description: "Easily embed Kyvorn into your website"
+---
 
+<Warning>
+  We do not recommend using Kyvorn Embedded as it requires the user to manually copy and paste the loadstring/script in unless your executor supports Kyvorn Execute.
+</Warning>
+
+---
+title: "Kyvorn Embedded"
+description: "Easily embed Kyvorn into your website"
+---
+
+---
+title: "Kyvorn Embedded"
+description: "Easily embed Kyvorn into your website"
+---
+
+`/c`
+
+```markdown iframe.html
+<iframe src="https://kyvorn.peretas.tech/app/content.html" width="100%" height="600px" frameborder="0"></iframe>
+```
+
+Put the code above into your HTML file in order to embed the Kyvorn Embedded website.
+
+<Info>
+  A new Kyvorn Embedded special UI will be released in the future.
+</Info>
+
+![](https://cdn.discordapp.com/attachments/1317960985520246936/1338690974309679104/image.png?ex=67ac009f\&is=67aaaf1f\&hm=afd652901b830f7f7d1b7d14a4825d14153f41da006d03d4c1f33ed6e578d094&= "Kyvorn API embedded with one line of code")
