Documentation edits made through Mintlify web editor

--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -1,1 +1,24 @@
+---
+title: "Kyvorn Execute"
+description: "Implement Kyvorn Execute into your executor!"
+---
 
+<Warning>
+  We are still working on Kyvorn Execute. [Get the latest details and updates in the iBallexus Discord server.](https://discord.gg/iballexus) The information found here is only here for informational purposes and will change.
+</Warning>
+
+## What is Kyvorn Execute?
+
+![](https://cdn.discordapp.com/attachments/1317960985520246936/1338711696428236820/image.png?ex=67ac13ec\&is=67aac26c\&hm=82621846f6c5a030d42ae8235d6e2d6d134c741ad7f2bd3198474f905dcbaaaa&=)
+
+Imagine the ability to execute scripts directly from a script library without ever having to enter your executor. If your executor is Internal and supports Kyvorn Execute, you may be able to automatically connect on Roblox launch.
+
+![](https://cdn.discordapp.com/attachments/1338283384572608533/1338713766690422835/image.png?ex=67ac15da\&is=67aac45a\&hm=41565485c4424228b1794cd6294362c291c40a331f29e36ed53b55a469364b05&=)
+
+*Image above is a mockup and will look nothing like the final product.* You are also able to directly connect to your executor and execute scripts directly from the Kyvorn Editor. You'll be able to see some basic information about your executor and execute scripts.
+
+## Branding
+
+**Congratulations!** You just included Kyvorn inside of your application! Now, you are able to include the special Uses Kyvorn Execute badge onto your executor's website or Credits/Settings page. [You can download it on our main page here.](https://kyvorn.peretas.tech/#branding)
+
+![Kyvorn Logo](/supportskyvornexecute.png)
