--- a/api-reference/embedded.mdx
+++ b/api-reference/embedded.mdx
@@ -7,18 +7,6 @@ description: "Easily embed Kyvorn into your website"
   We do not recommend using Kyvorn Embedded as it requires the user to manually copy and paste the loadstring/script in unless your executor supports Kyvorn Execute.
 </Warning>
 
----
-title: "Kyvorn Embedded"
-description: "Easily embed Kyvorn into your website"
----
-
----
-title: "Kyvorn Embedded"
-description: "Easily embed Kyvorn into your website"
----
-
-`/c`
-
 ```markdown iframe.html
 <iframe src="https://kyvorn.peretas.tech/app/content.html" width="100%" height="600px" frameborder="0"></iframe>
 ```
@@ -29,4 +17,8 @@ Put the code above into your HTML file in order to embed the Kyvorn Embedded web
   A new Kyvorn Embedded special UI will be released in the future.
 </Info>
 
-![](https://cdn.discordapp.com/attachments/1317960985520246936/1338690974309679104/image.png?ex=67ac009f\&is=67aaaf1f\&hm=afd652901b830f7f7d1b7d14a4825d14153f41da006d03d4c1f33ed6e578d094&= "Kyvorn API embedded with one line of code")
+## ![](https://cdn.discordapp.com/attachments/1317960985520246936/1338690974309679104/image.png?ex=67ac009f\&is=67aaaf1f\&hm=afd652901b830f7f7d1b7d14a4825d14153f41da006d03d4c1f33ed6e578d094&= "Kyvorn API embedded with one line of code")Branding
+
+**Congratulations!** You just included Kyvorn inside of your application! Now, you are able to include the special Uses Kyvorn Embedded badge onto your executor's website or Credits/Settings page. [You can download it on our main page here.](https://kyvorn.peretas.tech/#branding)
+
+![Kyvorn Logo](/kyvornembedded.png)
