--- a/api-reference/execute.mdx
+++ b/api-reference/execute.mdx
@@ -17,6 +17,222 @@ Imagine the ability to execute scripts directly from a script library without ev
 
 *Image above is a mockup and will look nothing like the final product.* You are also able to directly connect to your executor and execute scripts directly from the Kyvorn Editor. You'll be able to see some basic information about your executor and execute scripts.
 
+## Kyvorn Execute Client Code
+
+Put this code on your client in order to have Kyvorn Execute always enabled. Code examples are Kyvorn Execute`v1.0.0`
+
+<Warning>
+  Some of the code might not work since I don't fully know Rust or C#, so if there are any community rewrites that do work, please let me know as I will put them on this page :)
+</Warning>
+
+<CodeGroup>
+  ```json executorinfo.json
+  {
+    "executorInfo": {
+      "executorname": "My Executor",
+      "version": "1.0.0",
+      "port": "42022",
+      "executeversion": "1.0.0"
+    }
+  }
+  ```
+
+  ```javascript execute.js
+  // node.js
+  // v1.0.0
+
+  const express = require('express');
+  const cors = require('cors');
+  const ei = require('./executorinfo.json');
+
+  const app = express();
+  const port = ei.executorInfo.port;
+
+  app.use(express.json({limit: '50mb'}));
+  app.use(express.urlencoded({limit: '50mb', extended: true}));
+
+  app.use(cors({
+      origin: '*',
+      methods: ['GET', 'POST', 'PUT', 'DELETE', 'PATCH', 'OPTIONS'],
+      allowedHeaders: '*',
+      credentials: true,
+      preflightContinue: true,
+      optionsSuccessStatus: 200
+  }));
+
+  app.use((req, res, next) => {
+      res.header('Access-Control-Allow-Origin', '*');
+      res.header('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, PATCH, OPTIONS');
+      res.header('Access-Control-Allow-Headers', '*');
+      res.header('Access-Control-Allow-Credentials', 'true');
+      res.header('Referrer-Policy', 'no-referrer');
+      next();
+  });
+
+
+  app.get('/execute/info', (req, res) => {
+      res.json(ei);
+  });
+
+  function executeScript(script) {
+      console.log("Executing script: " + script);
+  };
+
+  app.post('/execute/script', (req, res) => {
+      const script = req.body.script;
+
+      executeScript(script)
+
+      // You can use the "script" variable
+      // to have your executor execute the
+      // script that the user provides.
+      res.json({ success: true });
+  });
+
+  app.listen(port, () => {
+      console.log(`Server running on port ${port}`);
+  }).on('error', (err) => {
+      console.error('Error starting server:', err);
+  });
+  ```
+
+  ```rust execute.rs
+  use axum::{
+      routing::{get, post},
+      Json, Router,
+  };
+  use serde::{Deserialize, Serialize};
+  use std::fs;
+  use std::net::SocketAddr;
+  use tokio::net::TcpListener;
+
+  #[derive(Serialize, Deserialize)]
+  struct ExecutorInfo {
+      executorInfo: ExecutorPort,
+  }
+
+  #[derive(Serialize, Deserialize)]
+  struct ExecutorPort {
+      port: u16,
+  }
+
+  #[derive(Deserialize)]
+  struct ScriptRequest {
+      script: String,
+  }
+
+  async fn get_executor_info() -> Json<ExecutorInfo> {
+      let config_data = fs::read_to_string("executorinfo.json").expect("Failed to read config file");
+      let executor_info: ExecutorInfo =
+          serde_json::from_str(&config_data).expect("Invalid JSON format");
+      Json(executor_info)
+  }
+
+  async fn execute_script(Json(payload): Json<ScriptRequest>) -> Json<serde_json::Value> {
+      println!("Executing script: {}", payload.script);
+      Json(serde_json::json!({ "success": true }))
+  }
+
+  #[tokio::main]
+  async fn main() {
+      let config_data = fs::read_to_string("executorinfo.json").expect("Failed to read config file");
+      let executor_info: ExecutorInfo =
+          serde_json::from_str(&config_data).expect("Invalid JSON format");
+      let port = executor_info.executorInfo.port;
+
+      let app = Router::new()
+          .route("/execute/info", get(get_executor_info))
+          .route("/execute/script", post(execute_script));
+
+      let addr = SocketAddr::from(([127, 0, 0, 1], port));
+
+      println!("Server running on http://{}", addr);
+      axum::Server::bind(&addr)
+          .serve(app.into_make_service())
+          .await
+          .unwrap();
+  }
+  ```
+
+  ```cpp execute.cs
+  // C# (ASP.NET core)
+  using Microsoft.AspNetCore.Builder;
+  using Microsoft.AspNetCore.Http;
+  using Microsoft.AspNetCore.Hosting;
+  using Microsoft.Extensions.Hosting;
+  using Microsoft.Extensions.DependencyInjection;
+  using System.IO;
+  using System.Text.Json;
+  using System.Text.Json.Serialization;
+  using System.Threading.Tasks;
+
+  var builder = WebApplication.CreateBuilder(args);
+  builder.Services.AddCors();
+  var app = builder.Build();
+
+  string configText = File.ReadAllText("executorinfo.json");
+  ExecutorInfo executorInfo = JsonSerializer.Deserialize<ExecutorInfo>(configText);
+
+  app.UseCors(policy => policy
+      .AllowAnyOrigin()
+      .AllowAnyMethod()
+      .AllowAnyHeader()
+  );
+
+  app.MapGet("/execute/info", () => Results.Json(executorInfo));
+
+  app.MapPost("/execute/script", async (HttpContext context) =>
+  {
+      using var reader = new StreamReader(context.Request.Body);
+      string body = await reader.ReadToEndAsync();
+      var json = JsonSerializer.Deserialize<ScriptRequest>(body);
+      Console.WriteLine("Executing script: " + json.Script);
+      return Results.Json(new { success = true });
+  });
+
+  app.Run($"http://localhost:{executorInfo.Executor.Port}");
+
+  public class ExecutorInfo
+  {
+      [JsonPropertyName("executorInfo")]
+      public ExecutorPort Executor { get; set; }
+  }
+
+  public class ExecutorPort
+  {
+      [JsonPropertyName("port")]
+      public int Port { get; set; }
+  }
+
+  public class ScriptRequest
+  {
+      [JsonPropertyName("script")]
+      public string Script { get; set; }
+  }
+  ```
+</CodeGroup>
+
+### Setting your executor information
+
+Once you've put the proper file inside of your client, you'll need to make sure it runs on start and you have executorinfo.json included. You should change the **`executorname`** and **`version`** variables inside of the `executorinfo.json` file you have downloaded. For example, if your executor is called *SkiddieScript v1.0.7* you'd fill out the JSON like this:
+
+```json
+{
+  "executorInfo": {
+    "executorname": "SkiddieScript",
+    "version": "1.0.7",
+    "port": "42022",
+    "executeversion": "1.0.0"
+  }
+}
+```
+
+Keep `executeversion` as it is - this will be updated with Kyvorn Execute, and is used to inform the user of the Kyvorn Execute version your executor is using.
+
+### Executing from your web browser
+
+You'll be able to execute scripts automatically from the URL `/app/execute.html?sid=d90b09d0-fa30-45df-88f2-79b8a9cfb55c`, where the `sid` query is the post ID. It will automatically get the script content and send the request to your client.
+
 ## Branding
 
 **Congratulations!** You just included Kyvorn inside of your application! Now, you are able to include the special Uses Kyvorn Execute badge onto your executor's website or Credits/Settings page. [You can download it on our main page here.](https://kyvorn.peretas.tech/#branding)
