Documentation edits made through Mintlify web editor

--- a/api-reference/implementation.mdx
+++ b/api-reference/implementation.mdx
@@ -20,6 +20,10 @@ For this tutorial, I will create a basic UI card layout that will show informati
 
 <Warning>
   **Vulnerability Alert:** Do not use this code example in a product environment! There are issues where RCE/XSS is possible by attackers via embedding script tags/iframe tags into their script upload, which can be used to perform malicious activity. You can get around this by manually embedding each form with `textContent` instead of putting the entire thing in `innerHTML`, which is insecure and can cause these vulnerabilities.
+
+
+
+  **Out of date:** This example is missing important new updates to the Kyvorn library that should be included in your website. Do not use it for production.
 </Warning>
 
 <CodeGroup>
